# string-metrics-wasm

./: .gitattributes  .gitignore  .npmignore  .prettierignore  .prettierrc.json  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  RELEASE_NOTES.md  bench.js  benchmark-phase1b.js  biome.json  package-lock.json  package.json  smoke-test-cutoff-fix.js  smoke-test-phase1a.js  smoke-test-process-helpers.js  smoke-test-suggestions-api.js  smoke-test-token-metrics.js  smoke-test-unified-api.js  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml
.husky/: pre-commit  pre-push
docs/: README.md  development.md  publishing.md
docs/benchmarks/: v0.2.0-migration.md
docs/releases/: v0.1.0.md  v0.2.0.md  v0.3.0.md  v0.3.1.md  v0.3.4.md
docs/user-guide/: suggestions-api.md
schemas/: similarity.schema.json
scripts/: check-licenses.js  prepare-wasm-package.js
similarity-validator/: Cargo.toml  README.md
similarity-validator/src/: main.rs
src/: index.ts  lib.rs  wasm.ts
tests/: README.md  index.test.ts
tests/fixtures/v2.0.0/: basic.yaml  multiline.yaml  normalization-locale.yaml  normalization.yaml  substring.yaml  suggestions.yaml  unicode.yaml
tests/fixtures/v2.0.0/rapidfuzz/: indel-lcs.yaml  process.yaml  ratio.yaml  token-metrics.yaml  unified-api.yaml
