[workspace]
members = [".", "similarity-validator"]

[package]
name = "string-metrics-wasm"
version = "0.1.0"
edition = "2021"
description = "WASM bindings for high-performance string similarity metrics"
license = "MIT"
repository = "https://github.com/3leaps/string-metrics-wasm"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
strsim = "0.11"
unicode-normalization = "0.1"
unicode_categories = "0.1.1"
wasm-bindgen = "0.2"
