[package]
name = "similarity-validator"
version = "0.3.8"
edition = "2021"
description = "CLI tool to validate similarity metrics fixtures against rapidfuzz-rs"
license = "MIT"

[[bin]]
name = "similarity-validator"
path = "src/main.rs"

[dependencies]
# Core metric implementation (canonical source)
rapidfuzz = "0.5"

# CLI and utilities
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# Unicode normalization
unicode-normalization = "0.1"

# File operations and timestamps
glob = "0.3"
chrono = { version = "0.4", features = ["serde"] }
